--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: main
+name: AppBlocks.Models
 
 on:
   push:
@@ -22,9 +22,9 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Pack
-      run: dotnet pack -v normal -c Release --no-restore --include-symbols --include-source src/AppBlocks.Models.csproj
+      run: dotnet pack -v normal -c Release --no-restore --include-symbols --include-source src/${{github.workflow}}.csproj
     - name: Publish
-      run: dotnet nuget push src/bin/Release/AppBlocks.Models.*.nupkg --api-key  ${{ secrets.NUGET_KEY }} --source https://api.nuget.org/v3/index.json
+      run: dotnet nuget push src/bin/Release/${{github.workflow}}.*.nupkg --api-key  ${{ secrets.NUGET_KEY }} --source https://api.nuget.org/v3/index.json
       
       
       
