--- a/src/AppBlocks.Models.csproj
+++ b/src/AppBlocks.Models.csproj
@@ -9,9 +9,9 @@
     <RepositoryType>git</RepositoryType>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Description>The BASE of ALL THE THINGS</Description>
-    <AssemblyVersion>0.0.8.0</AssemblyVersion>
-    <FileVersion>0.0.8.0</FileVersion>
-    <Version>0.0.8</Version>
+    <AssemblyVersion>0.0.9.0</AssemblyVersion>
+    <FileVersion>0.0.9.0</FileVersion>
+    <Version>0.0.9</Version>
     <Company>AppBlocks, David Walker, Radical Dave</Company>
     <Authors>David Walker, Radical Dave</Authors>
     <Copyright>AppBlocks, David Walker, Radical Dave</Copyright>
@@ -26,11 +26,13 @@
 
   <ItemGroup>
     <Compile Remove="BaseItemDeprecated.cs" />
+    <Compile Remove="Member.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AppBlocks.Config" Version="0.0.0" />
+    <PackageReference Include="AppBlocks.Config" Version="0.0.4" />
     <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
