--- a/src/AppBlocks.Models.csproj
+++ b/src/AppBlocks.Models.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -9,14 +9,14 @@
     <RepositoryType>git</RepositoryType>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Description>The BASE of ALL THE THINGS</Description>
-    <AssemblyVersion>0.0.13.0</AssemblyVersion>
-    <FileVersion>0.0.13.0</FileVersion>
-    <Version>0.0.13</Version>
+    <AssemblyVersion>0.0.14.0</AssemblyVersion>
+    <FileVersion>0.0.14.0</FileVersion>
+    <Version>0.0.14</Version>
     <Company>AppBlocks, David Walker, Radical Dave</Company>
     <Authors>David Walker, Radical Dave</Authors>
     <Copyright>AppBlocks, David Walker, Radical Dave</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageReleaseNotes>renamed App to Context</PackageReleaseNotes>
+    <PackageReleaseNotes>Context cleanup merged Settings</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -27,6 +27,7 @@
   <ItemGroup>
     <Compile Remove="BaseItemDeprecated.cs" />
     <Compile Remove="Member.cs" />
+    <Compile Remove="Settings.cs" />
   </ItemGroup>
 
   <ItemGroup>
