--- a/src/AppBlocks.Models.csproj
+++ b/src/AppBlocks.Models.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://appblocks.net</PackageProjectUrl>
@@ -9,9 +9,9 @@
     <RepositoryType>git</RepositoryType>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Description>The BASE of ALL THE THINGS</Description>
-    <AssemblyVersion>0.0.17.0</AssemblyVersion>
-    <FileVersion>0.0.17.0</FileVersion>
-    <Version>0.0.17</Version>
+    <AssemblyVersion>0.0.18.0</AssemblyVersion>
+    <FileVersion>0.0.18.0</FileVersion>
+    <Version>0.0.18</Version>
     <Company>AppBlocks, David Walker, Radical Dave</Company>
     <Authors>David Walker, Radical Dave</Authors>
     <Copyright>AppBlocks, David Walker, Radical Dave</Copyright>
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <PackageReference Include="AppBlocks.Config" Version="0.0.5" />
+    <PackageReference Include="AppBlocks.DataReaders.FileDataReader" Version="0.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
