--- a/tests/AppBlocks.Models.Tests.csproj
+++ b/tests/AppBlocks.Models.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -36,6 +36,7 @@
 
   <ItemGroup>
     <PackageReference Include="AppBlocks.Config" Version="0.0.5" />
+    <PackageReference Include="AppBlocks.DataReaders.FileDataReader" Version="0.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
