from cleanup added fromxml

--- a/tests/AppBlocks.Models.Tests.csproj
+++ b/tests/AppBlocks.Models.Tests.csproj
@@ -18,12 +18,24 @@
   <ItemGroup>
     <None Remove="appsettings.json" />
     <None Remove="Data-Tests\AppBlocksApiAllTests.json" />
+    <None Remove="Data-Tests\Item.test.xml" />
     <None Remove="Data-Tests\ItemChildrenDeserializationTest.json" />
+    <None Remove="Data-Tests\ItemDeserializationTest.json" />
+    <None Remove="Data-Tests\ItemDeserializationTest.xml" />
     <None Remove="Data-Tests\UserDeserializationTest.json" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="Data-Tests\AppBlocksApiAllTests.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data-Tests\Item.Test.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>	
+    <Content Include="Data-Tests\ItemDeserializationTest.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data-Tests\ItemDeserializationTest.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data-Tests\UserDeserializationTest.json">
