--- a/src/AppBlocks.Models.csproj
+++ b/src/AppBlocks.Models.csproj
@@ -9,14 +9,14 @@
     <RepositoryType>git</RepositoryType>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Description>The BASE of ALL THE THINGS</Description>
-    <AssemblyVersion>0.0.22.0</AssemblyVersion>
-    <FileVersion>0.0.22.0</FileVersion>
-    <Version>0.0.22</Version>
+    <AssemblyVersion>0.0.23.0</AssemblyVersion>
+    <FileVersion>0.0.23.0</FileVersion>
+    <Version>0.0.23</Version>
     <Company>AppBlocks, David Walker, Radical Dave</Company>
     <Authors>David Walker, Radical Dave</Authors>
     <Copyright>AppBlocks, David Walker, Radical Dave</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageReleaseNotes>added Items,GetUrl,adjusted FromXml</PackageReleaseNotes>
+    <PackageReleaseNotes>added exception handling to Common.FromXmlList</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
