--- a/src/AppBlocks.Models.csproj
+++ b/src/AppBlocks.Models.csproj
@@ -11,12 +11,12 @@
     <Description>The BASE of ALL THE THINGS</Description>
     <AssemblyVersion>0.0.23.0</AssemblyVersion>
     <FileVersion>0.0.23.0</FileVersion>
-    <Version>0.0.23</Version>
+    <Version>0.0.24</Version>
     <Company>AppBlocks, David Walker, Radical Dave</Company>
     <Authors>David Walker, Radical Dave</Authors>
     <Copyright>AppBlocks, David Walker, Radical Dave</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageReleaseNotes>added exception handling to Common.FromXmlList</PackageReleaseNotes>
+    <PackageReleaseNotes>added FromDictionary, Mongo and MySql support</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -37,6 +37,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.15.0" />
+    <PackageReference Include="MongoRepository" Version="1.6.11" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Collections.Immutable" Version="6.0.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
